<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="wkolendo.dowodyrejestracyjne.models.Certificate" />

        <variable
            name="certificate"
            type="Certificate" />

    </data>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="12dp"
        android:layout_marginTop="12dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="12dp"
            android:paddingTop="4dp"
            android:paddingBottom="12dp">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/issuingAuthority"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_issuing_authority"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:startIconDrawable="@drawable/ic_bank_20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:enabled="false"
                    android:text="@{certificate.issuingAuthority}"
                    tools:text="PREZYDENT WROCŁAWIA\nUL. G. ZAPOLSKIEJ 4\n50-032 WROCŁAW" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleRegistrationNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_vehicle_registration_number"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/issuingAuthority"
                app:startIconDrawable="@drawable/ic_car_20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleRegistrationNumber}"
                    tools:text="WY 65461" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleManufacturer"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_vehicle_manufacturer"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleRegistrationNumber">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleManufacturer}"
                    tools:text="BMW" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleType"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_vehicle_type"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleManufacturer">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleType}"
                    tools:text="392C" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleTypeVariant"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:hint="@string/certificate_vehicle_type_variant"
                app:layout_constraintEnd_toStartOf="@id/vehicleTypeVersion"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleTypeVariant}"
                    tools:text="WA71" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleTypeVersion"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="@string/certificate_vehicle_type_version"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/vehicleTypeVariant"
                app:layout_constraintTop_toBottomOf="@id/vehicleType">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleTypeVersion}"
                    tools:text="5A" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleModel"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_vehicle_model"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleTypeVariant">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleModel}"
                    tools:text="320I" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/vehicleIdentificationNumber"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_vin"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleModel">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.vehicleIdentificationNumber}"
                    tools:text="VF32S8HZF44766503" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/dateOfFirstRegistration"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/certificate_date_of_first_registration"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/vehicleIdentificationNumber"
                app:startIconDrawable="@drawable/ic_calendar_day_20dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.dateOfFirstRegistration}"
                    tools:text="2009-06-04" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/issuingDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:hint="@string/certificate_issuing_date"
                app:layout_constraintEnd_toStartOf="@id/expiryDate"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/dateOfFirstRegistration">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.issuingDate}"
                    tools:text="2019-09-06" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/expiryDate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:hint="@string/certificate_expiry_date"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/issuingDate"
                app:layout_constraintTop_toBottomOf="@id/dateOfFirstRegistration">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@{certificate.expiryDate}"
                    tools:text="---" />

            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </com.google.android.material.card.MaterialCardView>

</layout>